--- a/PyProjects/django_project/blog/templates/blog/base.html
+++ b/PyProjects/django_project/blog/templates/blog/base.html
@@ -17,19 +17,20 @@
     {% else %}
      <title>Django Blog</title>
     {% endif %}
+
   </head>
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Django Blog"</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-toggle="navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand mr-4" href="/">Django Blog</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
             </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="/"><Home</a>
-              <a class="nav-item nav-link" href="/about">about</a>
+              <a class="nav-item nav-link" href="blog/"/a>
+              <a class="nav-item nav-link" href="about/">about</a>
             </div>
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="#">Login</a>
