--- a/frontend/javascript/web/styles.css
+++ b/frontend/javascript/web/styles.css
@@ -7,11 +7,12 @@ body{
 button{
   cursor:pointer;
   border:none;
-  padding:2px 10px 2px 10px;
+  padding:4px 10px 4px 10px;
+  transform:translate(0, -10px);
   height:22px;
+
   background-color: lightgreen;
-  position:relative;
-  align-self:center;
+  align-self:right;
   border-radius:5px;
 }
 button:hover{
@@ -24,25 +25,68 @@ button:hover{
   transform:translate(-50%,-50%);
   text-align:center;
 }
+#inputContainer{
+  align-self: center;
+  width: calc(100% - 520px);
+  height: 400px;
+  width: 400px;
+  position: fixed;
+  padding: 20px;
+  bottom: 0;
+  right: 0;
+}
+#container{
+  align-items: center;
+  width: calc(100% - 400px);
+}
 .row{
   display:flex;
+  flex-direction:row-reverse;
+  justify-content: space-evenly;
   align-items: center;
+}
+.row.hovered {
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.row.hovered > .sampleContainer.hovered{
+  display:initial;
+  justify-self: center;
+  box-shadow: 0px 0px 10px 3px black;
+  align-self: center;
+  z-index: 1;
+}
+.row.hovered > .sampleContainer{
+  display: none;
 }
 .thumb{
   width: 100%;
 }
 .rowLabel{
-  flex:2 1 0;
-  text-overflow: ellipsis;
+  flex:2;
+  text-overflow:ellipsis;
+  overflow:hidden;
   white-space:nowrap;
 }
 .sampleContainer{
-  flex:1 1 0;
+  flex:1;
   background-color: white;
   text-align: center;
   border-radius: 10%;
   margin: 1px;
   overflow: hidden;
 }
-  
+.emphasize{
+  visibility: visible;
+  background: linear-gradient(45deg,lightblue,lightgreen);
+}
+#chartContainer{
+  align-content: center;
+  background-color: white;
+  box-shadow: 0px 0px 10px 2px black;
+  position: fixed;
+  right:0;
+  top:50%;
+  transform:translate(-20px,calc(-150% + 30px));
+}
 
