--- a/frontend/javascript/web/styles.css
+++ b/frontend/javascript/web/styles.css
@@ -27,6 +27,7 @@ button:hover{
 }
 #inputContainer{
   align-self: center;
+  text-align: center;
   width: calc(100% - 520px);
   height: 400px;
   width: 400px;
@@ -47,14 +48,14 @@ button:hover{
 }
 .row.hovered {
   flex-direction: column;
+  text-align: center;
   flex-wrap: wrap;
 }
 .row.hovered > .sampleContainer.hovered{
   display:initial;
-  justify-self: center;
   box-shadow: 0px 0px 10px 3px black;
-  align-self: center;
-  z-index: 1;
+  text-align: center;
+  outline:11111px solid rgba(0,0,0,0.5);
 }
 .row.hovered > .sampleContainer{
   display: none;
@@ -90,3 +91,13 @@ button:hover{
   transform:translate(-20px,calc(-150% + 30px));
 }
 
+#predictedLabelContainer{
+  color:white;
+  font-size: 20px;
+  visibility:inherit;
+  max-width: 20%;
+  position: relative;
+  transform: translate(0%,40%);
+  padding: 5px;
+  background-color: blue;
+}
